--- a/packages/bedroom-main2/heating-on-demand.yaml
+++ b/packages/bedroom-main2/heating-on-demand.yaml
@@ -12,7 +12,7 @@ group:
   g_debug_bedroom_main2_heating:
     entities:
       - climate.bedroom_main2_thermostat
-      - climate.bedroom_main2_east_mode
+      - climate.bedroom_main2_east_thermostat
       - switch.bedroom_main2_demand
 
   g_debug_bedroom_main2_temperature:
@@ -25,7 +25,7 @@ group:
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_bedroom_main2_thermostat:
     entities:
-      - climate.bedroom_main2_east_mode
+      - climate.bedroom_main2_east_thermostat
 
 climate:
   - name: bedroom_main2_thermostat
@@ -85,7 +85,7 @@ automation:
   - alias: "bedroom_main2_update_setpoint"
     trigger:
       - platform: state
-        entity_id: climate.bedroom_main2_east_mode
+        entity_id: climate.bedroom_main2_east_thermostat
     action:
       - service: climate.set_temperature
         data_template:
