--- a/packages/bedroom-mark/heating-on-demand.yaml
+++ b/packages/bedroom-mark/heating-on-demand.yaml
@@ -7,10 +7,10 @@ homeassistant:
       icon: mdi:thermometer
       unit_of_measurement: "\xB0C"
 
-    climate.bedroom_mark_south_mode:
+    climate.bedroom_mark_south_thermostat:
       min_temp: 5
       max_temp: 25
-    climate.bedroom_mark_north_mode:
+    climate.bedroom_mark_north_thermostat:
       min_temp: 5
       max_temp: 25
 
@@ -19,8 +19,8 @@ group:
   g_debug_bedroom_mark_heating:
     entities:
       - climate.bedroom_mark_thermostat
-      - climate.bedroom_mark_south_mode
-      - climate.bedroom_mark_north_mode
+      - climate.bedroom_mark_south_thermostat
+      - climate.bedroom_mark_north_thermostat
       - switch.bedroom_mark_demand
 
   g_debug_bedroom_mark_temperature:
@@ -35,8 +35,8 @@ group:
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_bedroom_mark_thermostat:
     entities:
-      - climate.bedroom_mark_south_mode
-      - climate.bedroom_mark_north_mode
+      - climate.bedroom_mark_south_thermostat
+      - climate.bedroom_mark_north_thermostat
 
 climate:
   - name: bedroom_mark_thermostat
