--- a/packages/bedroom-main2/room.yaml
+++ b/packages/bedroom-main2/room.yaml
@@ -4,7 +4,7 @@
 
 homeassistant:
   customize:
-    climate.bedroom_main2_east_mode:
+    climate.bedroom_main2_east_thermostat:
       min_temp: 8
       max_temp: 25
 
@@ -19,7 +19,7 @@ group:
 
   bedroom_main2_setpoints:
     entities:
-    - climate.bedroom_main2_east_mode
+    - climate.bedroom_main2_east_thermostat
 
   bedroom_main2_lights:
 
