--- a/packages/study/heating-on-demand.yaml
+++ b/packages/study/heating-on-demand.yaml
@@ -15,14 +15,6 @@ group:
       - climate.study_west_thermostat
       - switch.study_demand
 
-  g_debug_study_temperature:
-    entities:
-      - sensor.study_temperature
-      - sensor.study_east_current_temperature
-      - sensor.study_west_current_temperature
-      - sensor.study_east_air_temperature
-      - sensor.study_west_air_temperature
-
   # Non-UI group which forwards setpoint updates
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_study_thermostat:
@@ -50,18 +42,16 @@ switch:
 sensor:
   - name: study_east_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.study_east_air_temperature/state'
-    ## dev: for mock mqtt devices
-    #value_template: '{{ value_json.temperature }}'
+    state_topic: 'ha/study_east/49/1/1'
+    value_template: '{{ value_json.value }}'
     unit_of_measurement: "\xB0C"
     expire_after: 1800  # 30mins
     force_update: true
 
   - name: study_west_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.study_west_air_temperature/state'
-    ## dev: for mock mqtt devices
-    #value_template: '{{ value_json.temperature }}'
+    state_topic: 'ha/study_west/49/1/1'
+    value_template: '{{ value_json.value }}'
     unit_of_measurement: "\xB0C"
     expire_after: 1800  # 30mins
     force_update: true
@@ -78,18 +68,3 @@ sensor:
       study_setpoint:
         value_template: "{{ states.climate.study_thermostat.attributes.temperature }}"
         unit_of_measurement: "\xB0C"
-
-automation:
-  # Redirect received temperatures over mqtt
-  - alias: "study_update_temperature"
-    trigger:
-      - platform: state
-        entity_id: sensor.study_east_air_temperature
-      - platform: state
-        entity_id: sensor.study_west_air_temperature
-    action:
-      - service: mqtt.publish
-        data_template:
-          topic: 'ha/raw/{{trigger.entity_id}}/state'
-          payload: '{{ trigger.to_state.state }}'
-
