ups: move from cyclops to router0

--- a/packages/eaton-ups.yaml
+++ b/packages/eaton-ups.yaml
@@ -4,7 +4,7 @@
 sensor:
   - platform: nut
     name: Eaton UPS
-    host: cyclops
+    host: router0
     port: 3493
     alias: eaton
     username: pixie
