--- a/packages/bedroom-mark/heating-on-demand.yaml
+++ b/packages/bedroom-mark/heating-on-demand.yaml
@@ -7,7 +7,7 @@ homeassistant:
       icon: mdi:thermometer
       unit_of_measurement: "\xB0C"
 
-    climate.bedroom_mark_south_thermostat:
+    climate.shellytrv_60a423d3f714:
       min_temp: 5
       max_temp: 25
     climate.bedroom_mark_north_thermostat:
@@ -19,7 +19,7 @@ group:
   g_debug_bedroom_mark_heating:
     entities:
       - climate.bedroom_mark_thermostat
-      - climate.bedroom_mark_south_thermostat
+      - climate.shellytrv_60a423d3f714
       - climate.bedroom_mark_north_thermostat
       - switch.bedroom_mark_demand
 
@@ -27,7 +27,7 @@ group:
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_bedroom_mark_thermostat:
     entities:
-      - climate.bedroom_mark_south_thermostat
+      - climate.shellytrv_60a423d3f714
       - climate.bedroom_mark_north_thermostat
 
 climate:
@@ -48,14 +48,6 @@ switch:
     retain: true
 
 sensor:
-  - name: bedroom_mark_south_current_temperature
-    platform: mqtt
-    state_topic: 'zwave/bedroom_mark_south/49/0/Air_temperature'
-    value_template: '{{ value_json.value }}'
-    unit_of_measurement: "\xB0C"
-    expire_after: 1800  # 30mins
-    force_update: true
-
   - name: bedroom_mark_north_current_temperature
     platform: mqtt
     state_topic: 'zwave/bedroom_mark_north/49/0/Air_temperature'
@@ -69,7 +61,7 @@ sensor:
     type: max  # minimize occasional 0 readings. Replace with median?
     entity_ids:
       - sensor.aeotec_zw100_multisensor_temperature_air
-      - sensor.bedroom_mark_south_current_temperature
+      - sensor.shellytrv_60a423d3f714_temperature
       - sensor.bedroom_mark_north_current_temperature
 
   - platform: template
