--- a/packages/washing-machine.yaml
+++ b/packages/washing-machine.yaml
@@ -77,7 +77,9 @@ automation:
   condition:
     - condition: state
       entity_id: binary_sensor.washing_machine
-      state: 'off'
+      state:
+        - 'off'
+        - 'unknown'
   action:
     # turn on binary_sensor.washing_machine
     - service: mqtt.publish
@@ -99,7 +101,9 @@ automation:
   condition:
     - condition: state
       entity_id: binary_sensor.washing_machine
-      state: 'on'
+      state:
+        - 'on'
+        - 'unknown'
   action:
     # turn off binary_sensor.washing_machine
     - service: mqtt.publish
